# tg-echo-service

./: .containerignore  .gitignore  .gitmodules  CMakeLists.txt  Containerfile  Containerfile.tools  LICENSE  Makefile  NOTICE.md  README.md  compose.yaml  main.cpp  video_platform.cpp
.github/workflows/: build-image.yml
deploy/: README.md  tg-call-service.container  tg-call-service.env.example  tg-echo.container  tg-echo.env.example
stub/: audio_device_stub.cc
stub/crc32c/: crc32c_config.h
